# Text-Adventure

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt~  DictionaryCmds.cpp  DictionaryCmds.hpp  README.md  game.ini  get-deps.sh  play.sh  runProgram.sh  server-start.sh  server.ini
apps/: CMakeLists.txt  CMakeLists.txt~
apps/client/: CMakeLists.txt
apps/client/include/: Connector.hpp  ConsoleReader.hpp  ConsoleWriter.hpp  Game.hpp  LoginWindow.hpp~  MainWindow.hpp  ServerConnection.hpp  SubWindow.hpp  SubWindow.hpp~  Transceiver.hpp  UIReader.hpp  UIWriter.hpp
apps/client/include/ui/: CharacterFrame.hpp  CreateFrame.hpp  GameFrame.hpp  GameFrame.hpp~  GameWindow.hpp  LoginFrame.hpp  LoginWindow.hpp  MainWindow.hpp  MainWindow.hpp~  RegisterFrame.hpp  SubFrame.hpp  SubFrame.hpp~  SubWindow.hpp  SubWindow.hpp~  UIFrame.hpp  UIFrame.hpp~  UINotebook.hpp
apps/client/lib/: CMakeLists.txt
apps/client/lib/cui/: CMakeLists.txt  ConsoleReader.cpp  ConsoleWriter.cpp
apps/client/lib/game/: CMakeLists.txt  Game.cpp
apps/client/lib/net/: CMakeLists.txt  CMakeLists.txt~  Connector.cpp  Transceiver.cpp
apps/client/lib/ui/: CMakeLists.txt  CMakeLists.txt~  CharacterFrame.cpp  CreateFrame.cpp  GameFrame.cpp  GameFrame.cpp~  GameWindow.cpp  LoginFrame.cpp  LoginWindow.cpp  LoginWindow.cpp~  MainWindow.cpp  MainWindow.cpp~  RegisterFrame.cpp  SubFrame.cpp  SubFrame.cpp~  SubWindow.cpp  SubWindow.cpp~  UIFrame.cpp~  UINotebook.cpp  UIReader.cpp  UIWriter.cpp
apps/client/src/: CMakeLists.txt  CMakeLists.txt~  client-net-test.cpp  client.cpp  client.cpp~  main.cpp  main.cpp~  ui_command.cpp  ui_command.cpp~  ui_world.cpp  user_interface.cpp
apps/server/: CMakeLists.txt  CMakeLists.txt~
apps/server/databases/: adventureDB  adventureDB-journal  iteration1AddZones.sql  tableCreateStatments.sql  tableCreateStatments.txt
apps/server/databases/loadableWorlds/: CMakeLists.txt~  midgaard.yml  smurf.yml
apps/server/include/: Authenticator.hpp  CarrierPigeon.hpp  CastSpell.hpp  Combat.hpp  CombatConstants.hpp  CombatInstance.hpp  Command.hpp  CommandParser.hpp  Connection.hpp  DatabaseTool.hpp  DictionaryCmds.hpp  Server.hpp  Session.hpp  Spellcasting.hpp  User.hpp  Watcher.hpp  World.hpp  WorldConstants.hpp  YamlParser.hpp  Zone.hpp
apps/server/include/char/: Character.hpp  CharacterManager.hpp
apps/server/include/cmd/: Commander.hpp
apps/server/include/mod/: Editor.hpp  ItemEditor.hpp  ObjectEditor.hpp  WorldEditor.hpp
apps/server/lib/: CMakeLists.txt  CMakeLists.txt~
apps/server/lib/auth/: Authenticator.cpp  Authenticator.cpp~  CMakeLists.txt  User.cpp
apps/server/lib/char/: CMakeLists.txt  Character.cpp  CharacterManager.cpp
apps/server/lib/cmd/: CMakeLists.txt  Commander.cpp
apps/server/lib/combat/: CMakeLists.txt  Combat.cpp  CombatInstance.cpp
apps/server/lib/database/: CMakeLists.txt  Database.cpp  DatabaseTool.cpp  Query.cpp  SQLog.cpp  StderrLog.cpp  SysLog.cpp
apps/server/lib/mod/: CMakeLists.txt  Editor.cpp  ItemEditor.cpp  ObjectEditor.cpp  WorldEditor.cpp
apps/server/lib/msg/: CMakeLists.txt  CarrierPigeon.cpp
apps/server/lib/net/: CMakeLists.txt  Connection.cpp  Session.cpp  Watcher.cpp
apps/server/lib/parse/: CMakeLists.txt  CommandParser.cpp  DictionaryCmds.cpp
apps/server/lib/server/: CMakeLists.txt  Server.cpp
apps/server/lib/spellcasting/: CMakeLists.txt  CastSpell.cpp  Spellcasting.cpp
apps/server/lib/world/: CMakeLists.cpp  CMakeLists.txt  World.cpp  WorldConstants.cpp  Zone.cpp
apps/server/src/: CMakeLists.txt  CMakeLists.txt~  databaseTest.cpp  main.cpp  server-net-test.cpp  server.cpp  testStuff.cpp  testk.cpp  testmod.cpp  yamlparser.cpp  yamlparser.cpp~
cmake/: FindMake.cmake
docs/: CMakeLists.txt  It2 Criteria.txt  building.rst  character.rst  conf.py  configuring.rst  control.rst  index.rst  login.rst  overview.rst  run.rst  usage.rst
docs/game manual 1.0/html/: .buildinfo  building.html  character.html  configuring.html  control.html  index.html  login.html  objects.inv  overview.html  run.html  search.html  searchindex.js  usage.html
docs/game manual 1.0/html/_sources/: control.txt
include/: GameCode.hpp  Locale.hpp  NetConfig.hpp  NetMessage.hpp  WorldConstants.hpp
res/css/: LoginFrame.css  main.css
res/css/components/: _Button.css  _Dialog.css  _Entry.css  _Label.css
res/css/frames/: _CharacterFrame.css  _CreateFrame.css  _LoginFrame.css
res/css/util/: _Color.css
sfml/include/: button.hpp
sfml/lib/: CMakeLists.txt  button.cpp
sfml/src/: CMakeLists.txt  CMakeLists.txt~  main.cpp
yamlparser/: .cproject  .project  CMakeLists.txt  readme  readme~  yamlparsed  yamlparser.cpp
yamlparser/cmake/: FindYamlCpp.cmake~
yamlparser/cmake/Modules/: FindYamlCpp.cmake
